--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^1.0.2",
+    "konva": "^3.2.3",
     "vue": "^2.6.6",
     "vue-babylonjs": "^1.0.0-beta.6",
     "vue-clipboard2": "^0.3.0",
+    "vue-konva": "^2.0.3",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.5"
   },
