attempting to add twitter functionality

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "^6.26.0",
     "konva": "^3.2.3",
     "skulpt": "^0.11.1",
+    "twitter-node-client": "0.0.6",
     "vue": "^2.6.6",
     "vue-babylonjs": "^1.0.0-beta.6",
     "vue-clipboard2": "^0.3.0",
