--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-konva": "^2.0.3",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.20.0",
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
