--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tensorflow/tfjs": "^1.0.2",
     "babel-runtime": "^6.26.0",
     "konva": "^3.2.3",
+    "lz-string": "^1.4.4",
     "skulpt": "^0.11.1",
     "vue": "^2.6.6",
     "vue-babylonjs": "^1.0.0-beta.6",
