--- a/package.json
+++ b/package.json
@@ -9,37 +9,40 @@
     "deploy": "vue-cli-service build && push-dir --dir=dist --branch=master --cleanup"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^1.0.2",
+    "@babylonjs/core": "^4.0.3",
+    "@babylonjs/loaders": "^4.0.3",
+    "@tensorflow/tfjs": "^1.1.2",
     "babel-runtime": "^6.26.0",
-    "konva": "^3.2.3",
+    "konva": "^3.3.3",
     "lz-string": "^1.4.4",
     "register-service-worker": "^1.6.2",
+    "rollup": "^1.15.4",
     "skulpt": "^0.11.1",
-    "vue": "^2.6.6",
-    "vue-babylonjs": "^1.0.0-beta.6",
+    "vue": "^2.6.10",
+    "vue-babylonjs": "^1.0.0-beta.7",
     "vue-clipboard2": "^0.3.0",
     "vue-codemirror": "^4.0.6",
-    "vue-konva": "^2.0.3",
+    "vue-konva": "^2.0.7",
     "vue-markdown": "^2.2.4",
-    "vue-router": "^3.0.1",
-    "vuedraggable": "^2.20.0",
-    "vuetify": "^1.5.5"
+    "vue-router": "^3.0.6",
+    "vuedraggable": "^2.21.0",
+    "vuetify": "^1.5.14"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-pwa": "^3.8.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-service": "^3.8.3",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "push-dir": "^0.4.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   },
   "eslintConfig": {
     "root": true,
