--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babylonjs/core": "^4.0.3",
     "@babylonjs/loaders": "^4.0.3",
     "@tensorflow/tfjs": "^1.1.2",
+    "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "konva": "^3.3.3",
     "lz-string": "^1.4.4",
