--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tensorflow/tfjs": "^1.1.2",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
+    "jquery": "^1.7.2",
     "konva": "^3.3.3",
     "lz-string": "^1.4.4",
     "register-service-worker": "^1.6.2",
