--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "vue-konva": "^2.0.7",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.6",
+    "vue-simple-flowchart": "^0.1.8",
     "vuedraggable": "^2.21.0",
-    "vuetify": "^1.5.14"
+    "vuetify": "^1.5.22"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
