--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tensorflow/tfjs": "^1.5.1",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
+    "canvas2svg": "^1.0.16",
+    "file-saver": "^2.0.2",
     "jquery": "^1.7.2",
     "konva": "^3.4.1",
     "lz-string": "^1.4.4",
@@ -28,6 +30,7 @@
     "vue-babylonjs": "^1.0.0-beta.7",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror": "^4.0.6",
+    "vue-color": "^2.7.0",
     "vue-konva": "^2.1.1",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.1.3",
