--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "canvas2svg": "^1.0.16",
+    "canvg": "^3.0.5",
     "file-saver": "^2.0.2",
     "jquery": "^1.7.2",
     "konva": "^3.4.1",
