--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "cryptotron.vue": "file:../cryptotron.vue",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
