--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy": "push-dir --dir=dist --branch=master --cleanup"
   },
   "dependencies": {
-    "cryptotron.vue": "file:../cryptotron.vue",
+    "@jabez007/cryptotron.vue": "^0.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
