--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-embedded": "^1.89.1",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
   }
